--- a/DISEÑOINTERFACES/Tarea_1/style.css
+++ b/DISEÑOINTERFACES/Tarea_1/style.css
@@ -56,6 +56,7 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 .google-btn {
     background-color: white;
